Fixed all open issues for milestone 1.0
git-svn-id: svn://svn.code.sf.net/p/nbbeanshell/code@8 1aae85c6-19f3-460c-a681-f389938dc47c

--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -4,4 +4,4 @@ license.file=lgpl.txt
 nbm.module.author=Thomas Werner
 nbm.needs.restart=true
 keystore=/home/devx/dev-keystore.ks
-nbm_alias=nbhexedit
+nbm_alias=nbBeanShell
