Worked on debugger
git-svn-id: svn://svn.code.sf.net/p/nbbeanshell/code@17 1aae85c6-19f3-460c-a681-f389938dc47c

--- a/trunk/nbproject/private/platform-private.properties
+++ b/trunk/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/thomas/.netbeans/7.1rc1/build.properties
+user.properties.file=C:\\Users\\Tom\\.netbeans\\7.1rc2\\build.properties
