Worked on navigator - The parser can now process scripts with errors - The empty RootNode has been removed - Added common interface for BshMethodInfo and BshVariableInfo
git-svn-id: svn://svn.code.sf.net/p/nbbeanshell/code@24 1aae85c6-19f3-460c-a681-f389938dc47c

--- a/trunk/src/de/bfg9000/beanshell/Bundle.properties
+++ b/trunk/src/de/bfg9000/beanshell/Bundle.properties
@@ -6,8 +6,8 @@ OpenIDE-Module-Long-Description=\
 OpenIDE-Module-Name=BeanShell
 OpenIDE-Module-Short-Description=Adds BeanShell scripting language support to the IDE
 
-Services/MIMEResolver/BeanShellResolver.xml=BeanShell Files
-Templates/Other/BeanShellTemplate.bsh=BeanShell File
+Services/MIMEResolver/BeanShellResolver.xml=BeanShell Scripts
+Templates/Other/BeanShellTemplate.bsh=BeanShell Script
 text/x-beanshell=BeanShell
 
 character=Character
