Changed license from LGPL to GPL
git-svn-id: svn://svn.code.sf.net/p/nbbeanshell/code@28 1aae85c6-19f3-460c-a681-f389938dc47c

--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -1,6 +1,7 @@
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
-license.file=lgpl.txt
+license.file=license.txt
+nbm.homepage=http://sourceforge.net/projects/nbbeanshell/
 nbm.module.author=Thomas Werner
 nbm.needs.restart=true
 keystore=/home/thomas/dev-keystore.ks
