--- a/trunk/nbproject/private/platform-private.properties
+++ b/trunk/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/thomas/.netbeans/7.1rc1/build.properties
+user.properties.file=C:\\Users\\wernert.PC1042\\.netbeans\\7.1\\build.properties
