--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -4,5 +4,5 @@ license.file=license.txt
 nbm.homepage=http://sourceforge.net/projects/nbbeanshell/
 nbm.module.author=Thomas Werner
 nbm.needs.restart=true
-keystore=/home/thomas/dev-keystore.ks
+#keystore=/home/thomas/dev-keystore.ks
 nbm_alias=nbBeanShell
