Update plugin to Java 1.8 and Netbeans 8.1
Just made 1.2.0.  Not an official release, just trying to keep the version different than the last release

--- a/trunk/nbproject/private/platform-private.properties
+++ b/trunk/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\wernert.PC1042\\.netbeans\\7.1\\build.properties
+user.properties.file=/Users/mjwall/Library/Application Support/NetBeans/8.1/build.properties
